--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.3.0",
     "co": "^4.6.0",
     "commander": "^2.11.0",
     "log4js": "^2.3.12",
-    "redis": "^2.8.0",
+    "ora": "^1.3.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "xml2js": "^0.4.19"
