--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "commander": "^2.11.0",
     "log4js": "^2.3.12",
     "ora": "^1.3.0",
+    "qrcode-terminal": "^0.11.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "yargs": "^10.0.3"
   }
 }
