--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "chalk": "^2.3.0",
     "co": "^4.6.0",
     "commander": "^2.11.0",
+    "inquirer": "^4.0.0",
     "log4js": "^2.3.12",
     "ora": "^1.3.0",
     "qrcode-terminal": "^0.11.0",
+    "readline-sync": "^1.4.7",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "xml2js": "^0.4.19",
