--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/demo.js"
+      "program": "${workspaceFolder}/terminal.js"
     }
   ]
 }
