--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "co": "^4.6.0",
     "commander": "^2.11.0",
     "entities": "^1.1.1",
+    "error-ex": "^1.3.1",
     "inquirer": "^4.0.0",
     "log4js": "^2.3.12",
     "ora": "^1.3.0",
