--- a/package.json
+++ b/package.json
@@ -10,22 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^2.3.0",
-    "co": "^4.6.0",
     "commander": "^2.11.0",
     "entities": "^1.1.1",
-    "error-ex": "^1.3.1",
+    "fs-extra": "^4.0.3",
     "inquirer": "^4.0.0",
-    "jsonfile": "^4.0.0",
     "log4js": "^2.3.12",
     "ora": "^1.3.0",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.11.0",
-    "readline-sync": "^1.4.7",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "tough-cookie-file-store": "^1.2.0",
-    "xml2js": "^0.4.19",
-    "yargs": "^10.0.3"
+    "xml2js": "^0.4.19"
   }
 }
