--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "inquirer": "^4.0.0",
     "log4js": "^2.3.12",
     "ora": "^1.3.0",
+    "pcm": "^1.0.3",
+    "pcm-util": "^3.0.0",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.11.0",
     "request": "^2.83.0",
