--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "baidu-ai": "^1.2.0",
     "entities": "^1.1.1",
     "fs-extra": "^4.0.3",
     "inquirer": "^4.0.0",
