--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "baidu-ai": "^1.2.0",
     "entities": "^1.1.1",
+    "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^4.0.3",
     "inquirer": "^4.0.0",
     "log4js": "^2.3.12",
