--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "wechat-web",
   "version": "1.0.0",
-  "description": "",
+  "description": "cmd wechat",
   "main": "index.js",
   "scripts": {
-    "terminal": "node ./bin/terminal.js"
+    "terminal": "node ./bin/terminal.js",
+    "jsdoc":"jsdoc ./modules/Member.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^4.0.3",
     "inquirer": "^4.0.0",
+    "jsdoc": "^3.5.5",
     "log4js": "^2.3.12",
     "ora": "^1.3.0",
     "pcm": "^1.0.3",
